app/root.module.css
.main {
    min-height: 100vh;
    position: relative;
    /* background-color: purple; */
}
.heroDiv{
    height: 100vh;
}
.cloudGif {
    position: absolute;
    z-index: -1;
    height: 100vh;
    width: 100vw;
    filter: blur(5px);
}

.tab {
    background-color: #83838470;
    display: flex;
    margin: 10px;
    /* margin-top: 10px; */
    height: 40px;
    align-items: center;
    padding: 0px 3px;
    border-radius: 20px;
    justify-content: space-between;
    backdrop-filter: blur(10px);
    position: sticky;
    top: 0px;
    z-index: 3;

}

.tab img {
    height: 35px;
    width: 35px;
    border-radius: 50%;
}

.sectionTags {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;
    width: 100%;
}

.sectionTags a {
    font-weight: 500;
    transition: all 0.2s;
}

.sectionTags a:hover {
    transform: scale(0.95);
    cursor: pointer;
}

.bigAghLogo {
    /* position: absolute; */
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    transform: translateY(-40px);
    /* border: 3px solid red; */
}

.bigAghLogo h1 {
    font-size: 60px;
    letter-spacing: 40px;
    font-weight: 500;
    animation: bigLogoAnimation 1s ease-in;
    color: white;

}

@keyframes bigLogoAnimation {
    0% {
        opacity: 0;
        transform: translateY(10px);
    }
}

.getStarted {
    background-color: #373cc6;
    padding: 10px 15px;
    font-size: 20px;
    font-weight: 400;
    height: 50px;
    border-radius: 15px;
    position: absolute;
    bottom: 100px;
    cursor: pointer;
    transition: all 0.2s;
    display: flex;
    align-items: center;
    gap: 5px;
    /* z-index: 2; */
    /* border: 3px solid red; */
}

.getStarted:hover {
    background-color: #7139e9;
    transform: scale(0.95);
}

.sectionHeading {
    font-size: 40px;
    font-weight: 400;
    margin-bottom: 10px;
    color: white;
    /* border: 3px solid red; */
}

.documentEditing,.shareDiv {
    background-color: black;
    display: flex;
    flex-direction: column;
    padding: 20px;
}
.documentEditing p,.shareDiv p {
    margin-left: 20px;
    color: rgb(205, 205, 205);
}
.documentEditing img {
    margin-top: 20px;
    width: 65vw;
    object-fit: contain;
    margin: auto;
}
.shareDiv .para{
    display: flex;
    justify-content: space-between;
    padding: 0px 50px;
}
.shareDiv .picsHolder{
    display: flex;
    /* margin-top: 20px; */
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    margin-left: 20px;
}
.shareDiv .friendsTabImg{
    /* height: 500px; */
    width: 800px;
    object-fit: contain;
}
.shareDiv .shareBoxImg{
    /* height: 400px; */
    width: 500px;
    object-fit: contain;
}


@media (max-width:500px) {
    .main{
        width: 100vw;
        overflow: hidden;
        margin: 0;
        /* zoom: 1; */
        /* background-color: red; */
    }
    .main *{
        /* border: 3px solid red; */
        max-width: 100vw;
    }
    .tab{
        /* width: 100%; */
        margin: 0px;
        padding: 25px 5px;
        border-radius: 0;
        gap: 5px;
        .sectionTags{
            gap: 0;
            justify-content: space-between;
            padding-right: 10px;
            /* margin-right: 10px; */
        }
    }
    .cloudGif{
        width: 100vw;
        object-fit: cover;
        filter: blur(20px);
        margin: 0;
    }
    .getStarted{
        bottom: 20%;
    }
    .sectionHeading{
        font-size: 30px;
    }
    .bigAghLogo h1{
        font-size: 2em;
        letter-spacing: 10px;
    }
    .documentEditing,.shareDiv{
        /* padding: 0; */
        width: 100vw;
    }
    

    .shareDiv .para{
        flex-direction: column;
        /* align-items: flex-start; */
        /* justify-content: flex-start; */
        /* border: 3px solid red; */
        padding: 0;
        margin-bottom: 10px;
    }
    .shareDiv .picsHolder{
        flex-wrap: wrap;
        margin: 0;
        gap: 20px;
        padding: 0;
        justify-content: center;
    }
    .documentEditing img{
        width: 100%;
        margin-top: 20px;
        /* border: 3px solid red; */
    }
    .shareDiv .friendsTabImg{
        width: 80vw;
        /* border: 3px solid red; */
    
    }
    .shareDiv .shareBoxImg{
        width: 70vw;
        /* border: 3px solid red; */
    }
}

